Ensure inverted sections without backdrop have light background
Otherwise text and selection elements are hard to see.

REDMINE-17705

--- a/entry_types/scrolled/package/src/frontend/Section.module.css
+++ b/entry_types/scrolled/package/src/frontend/Section.module.css
@@ -1,7 +1,9 @@
 .Section {
   position: relative;
+  background-color: #000;
 }
 
 .invert {
+  background-color: #fff;
   color: #222;
 }
